deploy: 4429b3d67c6e123da592b5d2148da9526d6c31dc

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/modules/pages/_page.js-dc85b7cd.js">
 		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/_page-da46b06b.js"><title>Home</title><!-- HEAD_svelte-t32ptj_START --><meta name="description" content="Svelte demo app"><!-- HEAD_svelte-t32ptj_END -->
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body>
 		<div style="display: contents">
 
 
@@ -61,7 +61,7 @@
 				env: {},
 				paths: {"assets":"/sv-preload-code","base":"/sv-preload-code"},
 				target: document.querySelector('[data-sveltekit-hydrate="n78c9b"]').parentNode,
-				version: "1674790378388",
+				version: "1674790649149",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
