--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="/sv-preload-code/internal/immutable/assets/_layout-8454f68e.css" rel="stylesheet"><title>About</title><!-- HEAD_svelte-1ds1qyu_START --><meta name="description" content="About this app"><!-- HEAD_svelte-1ds1qyu_END -->
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body>
 		<div style="display: contents">
 
 
