deploy: 63e553b294f397767e1ecea90263bafae7b9d784

--- a/index.html
+++ b/index.html
@@ -5,63 +5,39 @@
 		<link rel="icon" href="/sv-preload-code/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="/sv-preload-code/internal/immutable/assets/_layout-8454f68e.css" rel="stylesheet">
-		<link href="/sv-preload-code/internal/immutable/assets/_page-265a38f0.css" rel="stylesheet">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/start-9c0fe249.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/index-4f507e4d.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/singletons-a4f93593.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/index-74879930.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/pages/_layout.svelte-4d2473f7.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/stores-8741cfb7.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/pages/_page.svelte-d25efd40.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/modules/pages/_page.js-dc85b7cd.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/_page-da46b06b.js"><title>Home</title><!-- HEAD_svelte-t32ptj_START --><meta name="description" content="Svelte demo app"><!-- HEAD_svelte-t32ptj_END -->
+		<link href="/sv-preload-code/internal/immutable/assets/_page-72be983d.css" rel="stylesheet">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/start-310cbce9.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/index-d7e9bce7.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/singletons-2e40df53.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/shared-23917130.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/pages/_layout.svelte-156da29a.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/modules/pages/_layout.js-9cbb603b.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/_layout-da46b06b.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/pages/_page.svelte-e35fe2cb.js"><title>Home</title><!-- HEAD_svelte-5ssqet_START --><meta name="description" content="Svelte demo app"><!-- HEAD_svelte-5ssqet_END -->
 	</head>
 	<body>
 		<div style="display: contents">
 
 
-<div class="app svelte-8o1gnw"><header class="svelte-1u9z1tp"><div class="corner svelte-1u9z1tp"><a href="https://kit.svelte.dev" class="svelte-1u9z1tp"><img src="/sv-preload-code/internal/immutable/assets/svelte-logo-87df40b8.svg" alt="SvelteKit" class="svelte-1u9z1tp"></a></div>
-
-	<nav class="svelte-1u9z1tp"><svg viewBox="0 0 2 3" aria-hidden="true" class="svelte-1u9z1tp"><path d="M0,0 L1,2 C1.5,3 1.5,3 2,3 L2,0 Z" class="svelte-1u9z1tp"></path></svg>
-		<ul class="svelte-1u9z1tp"><li class="svelte-1u9z1tp"><a href="/sv-preload-code/" class="svelte-1u9z1tp">Home</a></li>
-			<li class="svelte-1u9z1tp"><a href="/sv-preload-code/about" data-sveltekit-preload-code="hover" class="svelte-1u9z1tp">About</a></li></ul>
-		<svg viewBox="0 0 2 3" aria-hidden="true" class="svelte-1u9z1tp"><path d="M0,0 L0,3 C0.5,3 0.5,3 1,2 L2,0 Z" class="svelte-1u9z1tp"></path></svg></nav>
-
-	<div class="corner svelte-1u9z1tp"><a href="https://github.com/sveltejs/kit" class="svelte-1u9z1tp"><img src="/sv-preload-code/internal/immutable/assets/github-1ea8d62e.svg" alt="GitHub" class="svelte-1u9z1tp"></a></div>
-</header>
-
-	<main class="svelte-8o1gnw">
-
-<section class="svelte-19xx0bt"><h1 class="svelte-19xx0bt"><span class="welcome svelte-19xx0bt"><picture><source srcset="/sv-preload-code/internal/immutable/assets/svelte-welcome-c18bcf5a.webp" type="image/webp">
-				<img src="/sv-preload-code/internal/immutable/assets/svelte-welcome-6c300099.png" alt="Welcome" class="svelte-19xx0bt"></picture></span>
-
-		to your new<br>SvelteKit app
-	</h1>
-
-	<h2>try editing <strong>src/routes/+page.svelte</strong></h2>
-
-	<div class="counter svelte-y96mxt"><button aria-label="Decrease the counter by one" class="svelte-y96mxt"><svg aria-hidden="true" viewBox="0 0 1 1" class="svelte-y96mxt"><path d="M0,0.5 L1,0.5" class="svelte-y96mxt"></path></svg></button>
-
-	<div class="counter-viewport svelte-y96mxt"><div class="counter-digits svelte-y96mxt" style="transform: translate(0, 0%)"><strong class="hidden svelte-y96mxt" aria-hidden="true">1</strong>
-			<strong class="svelte-y96mxt">0</strong></div></div>
-
-	<button aria-label="Increase the counter by one" class="svelte-y96mxt"><svg aria-hidden="true" viewBox="0 0 1 1" class="svelte-y96mxt"><path d="M0,0.5 L1,0.5 M0.5,0 L0.5,1" class="svelte-y96mxt"></path></svg></button>
-</div>
-</section></main>
-
-	<footer class="svelte-8o1gnw"><p>visit <a href="https://kit.svelte.dev" class="svelte-8o1gnw">kit.svelte.dev</a> to learn SvelteKit</p></footer>
-</div>
+<div class="app"><main>
+<section class="svelte-mug558"><h1>preload triggered on hover</h1>
+    <div data-sveltekit-preload-data="hover" class="svelte-mug558"><a href="/sv-preload-code/1" class="svelte-mug558">1. PARENT: preload-data, SELF: none</a></div>
+    <div data-sveltekit-preload-data="hover" class="svelte-mug558"><a href="/sv-preload-code/2" data-sveltekit-preload-code="hover" class="svelte-mug558">2. PARENT: preload-data, SELF: preload-code</a></div>
+    <div data-sveltekit-preload-code="hover" class="svelte-mug558"><a href="/sv-preload-code/3" class="svelte-mug558">3. PARENT: preload-code, SELF: none</a></div>
+    <div data-sveltekit-preload-code="hover" class="svelte-mug558"><a href="/sv-preload-code/4" data-sveltekit-preload-data="hover" class="svelte-mug558">4. PARENT: preload-code, SELF: preload-data</a></div>
+    <div class="svelte-mug558"><a href="/sv-preload-code/5" data-sveltekit-preload-data="hover" class="svelte-mug558">5. PARENT: none, SELF: preload-data</a></div>
+    <div class="svelte-mug558"><a href="/sv-preload-code/6" data-sveltekit-preload-code="hover" class="svelte-mug558">6. PARENT: none, SELF: preload-code</a></div>
+</section></main></div>
 
 
-		<script type="module" data-sveltekit-hydrate="n78c9b">
-			import { start } from "/sv-preload-code/internal/immutable/start-9c0fe249.js";
+		<script type="module" data-sveltekit-hydrate="oftz2e">
+			import { start } from "/sv-preload-code/internal/immutable/start-310cbce9.js";
 
 			start({
 				env: {},
 				paths: {"assets":"/sv-preload-code","base":"/sv-preload-code"},
-				target: document.querySelector('[data-sveltekit-hydrate="n78c9b"]').parentNode,
-				version: "1674790649149",
+				target: document.querySelector('[data-sveltekit-hydrate="oftz2e"]').parentNode,
+				version: "1674796246748",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
