--- a/3.html
+++ b/3.html
@@ -5,30 +5,30 @@
 		<link rel="icon" href="/sv-preload-code/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/start-310cbce9.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/index-d7e9bce7.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/singletons-2e40df53.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/start-04e9dd81.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/index-97c4cb29.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/singletons-69859195.js">
 		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/shared-23917130.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/pages/_layout.svelte-156da29a.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/layout.svelte-129db079.js">
 		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/pages/3/_page.svelte-92e080c8.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/pages/3/_page.svelte-e050ce0a.js">
 	</head>
 	<body>
 		<div style="display: contents">
 
 
-<div class="app"><main><h1>Hello there</h1></main></div>
+<h1>Hello there</h1>
 
 
-		<script type="module" data-sveltekit-hydrate="1ly467y">
-			import { start } from "/sv-preload-code/internal/immutable/start-310cbce9.js";
+		<script type="module" data-sveltekit-hydrate="1mntqj0">
+			import { start } from "/sv-preload-code/internal/immutable/start-04e9dd81.js";
 
 			start({
 				env: {},
 				paths: {"assets":"/sv-preload-code","base":"/sv-preload-code"},
-				target: document.querySelector('[data-sveltekit-hydrate="1ly467y"]').parentNode,
-				version: "1674796246748",
+				target: document.querySelector('[data-sveltekit-hydrate="1mntqj0"]').parentNode,
+				version: "1674796606253",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
