--- a/index.html
+++ b/index.html
@@ -6,38 +6,39 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="/sv-preload-code/internal/immutable/assets/_page-72be983d.css" rel="stylesheet">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/start-310cbce9.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/index-d7e9bce7.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/singletons-2e40df53.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/start-04e9dd81.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/index-97c4cb29.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/singletons-69859195.js">
 		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/shared-23917130.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/pages/_layout.svelte-156da29a.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/layout.svelte-129db079.js">
 		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/pages/_page.svelte-e35fe2cb.js"><title>Home</title><!-- HEAD_svelte-5ssqet_START --><meta name="description" content="Svelte demo app"><!-- HEAD_svelte-5ssqet_END -->
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/pages/_page.svelte-923c5fe3.js"><title>Home</title><!-- HEAD_svelte-5ssqet_START --><meta name="description" content="Svelte demo app"><!-- HEAD_svelte-5ssqet_END -->
 	</head>
 	<body>
 		<div style="display: contents">
 
 
-<div class="app"><main>
-<section class="svelte-mug558"><h1>preload triggered on hover</h1>
-    <div data-sveltekit-preload-data="hover" class="svelte-mug558"><a href="/sv-preload-code/1" class="svelte-mug558">1. PARENT: preload-data, SELF: none</a></div>
-    <div data-sveltekit-preload-data="hover" class="svelte-mug558"><a href="/sv-preload-code/2" data-sveltekit-preload-code="hover" class="svelte-mug558">2. PARENT: preload-data, SELF: preload-code</a></div>
-    <div data-sveltekit-preload-code="hover" class="svelte-mug558"><a href="/sv-preload-code/3" class="svelte-mug558">3. PARENT: preload-code, SELF: none</a></div>
-    <div data-sveltekit-preload-code="hover" class="svelte-mug558"><a href="/sv-preload-code/4" data-sveltekit-preload-data="hover" class="svelte-mug558">4. PARENT: preload-code, SELF: preload-data</a></div>
-    <div class="svelte-mug558"><a href="/sv-preload-code/5" data-sveltekit-preload-data="hover" class="svelte-mug558">5. PARENT: none, SELF: preload-data</a></div>
-    <div class="svelte-mug558"><a href="/sv-preload-code/6" data-sveltekit-preload-code="hover" class="svelte-mug558">6. PARENT: none, SELF: preload-code</a></div>
-</section></main></div>
 
 
-		<script type="module" data-sveltekit-hydrate="oftz2e">
-			import { start } from "/sv-preload-code/internal/immutable/start-310cbce9.js";
+<div class="app"><main><section class="svelte-mug558"><h1>preload triggered on hover</h1>
+            <div data-sveltekit-preload-data="hover" class="svelte-mug558"><a href="/sv-preload-code/1" class="svelte-mug558">1. PARENT: preload-data, SELF: none</a></div>
+            <div data-sveltekit-preload-data="hover" class="svelte-mug558"><a href="/sv-preload-code/2" data-sveltekit-preload-code="hover" class="svelte-mug558">2. PARENT: preload-data, SELF: preload-code</a></div>
+            <div data-sveltekit-preload-code="hover" class="svelte-mug558"><a href="/sv-preload-code/3" class="svelte-mug558">3. PARENT: preload-code, SELF: none</a></div>
+            <div data-sveltekit-preload-code="hover" class="svelte-mug558"><a href="/sv-preload-code/4" data-sveltekit-preload-data="hover" class="svelte-mug558">4. PARENT: preload-code, SELF: preload-data</a></div>
+            <div class="svelte-mug558"><a href="/sv-preload-code/5" data-sveltekit-preload-data="hover" class="svelte-mug558">5. PARENT: none, SELF: preload-data</a></div>
+            <div class="svelte-mug558"><a href="/sv-preload-code/6" data-sveltekit-preload-code="hover" class="svelte-mug558">6. PARENT: none, SELF: preload-code</a></div></section></main>
+</div>
+
+
+		<script type="module" data-sveltekit-hydrate="2lnu4s">
+			import { start } from "/sv-preload-code/internal/immutable/start-04e9dd81.js";
 
 			start({
 				env: {},
 				paths: {"assets":"/sv-preload-code","base":"/sv-preload-code"},
-				target: document.querySelector('[data-sveltekit-hydrate="oftz2e"]').parentNode,
-				version: "1674796246748",
+				target: document.querySelector('[data-sveltekit-hydrate="2lnu4s"]').parentNode,
+				version: "1674796606253",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
