--- a/6.html
+++ b/6.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="/sv-preload-code/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/start-04e9dd81.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/index-97c4cb29.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/singletons-69859195.js">
+<head>
+    <title>sv-preload</title>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="/sv-preload-code/favicon.png"/>
+    <meta name="viewport" content="width=device-width"/>
+    <meta http-equiv="content-security-policy" content="">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/start-7bc0c059.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/index-1664d19c.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/singletons-302890b8.js">
 		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/shared-23917130.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/layout.svelte-129db079.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/layout.svelte-e0888d8b.js">
 		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/pages/6/_page.svelte-e050ce0a.js">
-	</head>
-	<body>
-		<div style="display: contents">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/pages/6/_page.svelte-f28ef154.js">
+</head>
+<body>
+<div style="display: contents">
 
 
 <h1>Hello there</h1>
 
 
 		<script type="module" data-sveltekit-hydrate="1mntqj0">
-			import { start } from "/sv-preload-code/internal/immutable/start-04e9dd81.js";
+			import { start } from "/sv-preload-code/internal/immutable/start-7bc0c059.js";
 
 			start({
 				env: {},
 				paths: {"assets":"/sv-preload-code","base":"/sv-preload-code"},
 				target: document.querySelector('[data-sveltekit-hydrate="1mntqj0"]').parentNode,
-				version: "1674796606253",
+				version: "1674797939851",
 				hydrate: {
 					node_ids: [0, 8],
 					data: [null,null],
@@ -38,5 +39,5 @@
 			});
 		</script>
 	</div>
-	</body>
+</body>
 </html>
