--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="/sv-preload-code/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		<meta http-equiv="content-security-policy" content="">
+<head>
+    <title>sv-preload</title>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="/sv-preload-code/favicon.png"/>
+    <meta name="viewport" content="width=device-width"/>
+    <meta http-equiv="content-security-policy" content="">
 		<link href="/sv-preload-code/internal/immutable/assets/_page-72be983d.css" rel="stylesheet">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/start-04e9dd81.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/index-97c4cb29.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/singletons-69859195.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/start-7bc0c059.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/index-1664d19c.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/singletons-302890b8.js">
 		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/shared-23917130.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/layout.svelte-129db079.js">
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/layout.svelte-e0888d8b.js">
 		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/pages/_page.svelte-923c5fe3.js"><title>Home</title><!-- HEAD_svelte-5ssqet_START --><meta name="description" content="Svelte demo app"><!-- HEAD_svelte-5ssqet_END -->
-	</head>
-	<body>
-		<div style="display: contents">
-
-
+		<link rel="modulepreload" href="/sv-preload-code/internal/immutable/components/pages/_page.svelte-5d5908fa.js">
+</head>
+<body>
+<div style="display: contents">
 
 
 <div class="app"><main><section class="svelte-mug558"><h1>preload triggered on hover</h1>
@@ -31,14 +30,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="2lnu4s">
-			import { start } from "/sv-preload-code/internal/immutable/start-04e9dd81.js";
+		<script type="module" data-sveltekit-hydrate="17yq3nw">
+			import { start } from "/sv-preload-code/internal/immutable/start-7bc0c059.js";
 
 			start({
 				env: {},
 				paths: {"assets":"/sv-preload-code","base":"/sv-preload-code"},
-				target: document.querySelector('[data-sveltekit-hydrate="2lnu4s"]').parentNode,
-				version: "1674796606253",
+				target: document.querySelector('[data-sveltekit-hydrate="17yq3nw"]').parentNode,
+				version: "1674797939851",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
@@ -48,5 +47,5 @@
 			});
 		</script>
 	</div>
-	</body>
+</body>
 </html>
